--- a/sistema-ventas-app/src/app/pages/admin/usuarios/usuarios.component.html
+++ b/sistema-ventas-app/src/app/pages/admin/usuarios/usuarios.component.html
@@ -162,12 +162,7 @@
       <td
         mat-cell
         *matCellDef="let element"
-        style="
-          padding: 15px;
-          display: flex;
-          gap: 12px;
-          border-radius: 0 10px 10px 0;
-        "
+        style="padding: 15px; display: flex; gap: 12px"
       >
         <button
           mat-flat-button
